syntax = "proto3";

// This file follows google's gRPC naming conventions:
// https://cloud.google.com/apis/design/naming_convention

import "google/protobuf/any.proto";

option go_package = "gitlab.figo.systems/platform/monoskope/monoskope/pkg/api/eventsourcing/commands";

package commands;

// Command is a command to be executed by the CommandHandler
message Command {
  // Type of the command
  string type = 1;
  // Command type specific data
  google.protobuf.Any data = 2;
}

message TestCommandData {
  string test = 1;
  int32 test_count = 2;
}